# snail_trader

./: .gitignore  .gitmodules  CLAUDE.md  README.md  data  launcher.py  main.py  pyproject.toml  setup.py  test_extended_range.py
binance-db/: .gitignore  LICENSE  PROMPT.md  README.md  config.yaml  csv2duckdb.py  get_all_symbols.py  main.py  pyproject.toml  requirements.txt  run.py  symbols.json
binance-db/src/: __init__.py  downloader.py  logger_setup.py  main.py  task_generator.py  task_tracker.py  utils.py
binance-db/test/: test_config.yaml  test_enhanced_config.yaml  test_resume.py
config/: backtest.yaml
configs/: backtest.yaml  base.yaml  core_test.yaml  data_serves_test.yaml  live.yaml  ollama.yaml
core/: README.md  __init__.py  base.py  constants.py  message_bus.py
indicators/: __init__.py  calculator.py  engine.py  types.py
llm_api/: universal_llm.py
metadata/: symbols.json
notebook/: llm_test.ipynb
services/: README.md  __init__.py  data_access_layer.py  data_analytics_service.py  data_fetch_service.py  data_service.py  indicator_engine.py  scheduler_service.py  state_management_service.py  webui_service.py
strategies/: __init__.py  ema200_config.yaml  ema200_strategy.py  example_strategy.py
tasks/: __init__.py  market_analysis_task.py  order_execution_task.py
test/: README.md  test_architecture.py  test_concurrent_fix.py  test_config.py  test_core_framework.py  test_webui_mock.py
utils/: config_utils.py  data_integrity_checker.py  data_query.py  log_utils.py  rate_limiter.py  rate_limiter_api.py  strategy_config_loader.py  welcome.py  (+3 more)
(+4 files in other folders)
