[project]
name = "snail_trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=6.30.1",
    "notebook>=7.4.5",
    "jupyter>=1.1.1",
    "fire>=0.7.0",
    "pyzmq>=27.0.1",
    "pandas-ta>=0.3.14b0",
    "aiohttp>=3.12.15",
    "aiohttp-cors>=0.8.1",
]
